syntax = "proto3";
package com.inlineio.schemas;

import "google/protobuf/timestamp.proto";

service InlineKVWriteService {
  rpc asyncUpsertFieldValues(UpsertFieldValuesRequest) returns (SuccessStatus) {}
  rpc asyncBatchUpsertFieldValues(BatchUpsertFieldValuesRequest) returns (SuccessStatus) {}

  rpc asyncDeleteFieldValues(DeleteFieldValueRequest) returns (SuccessStatus) {}
  rpc asyncBatchDeleteFieldValues(BatchDeleteFieldValuesRequest) returns (SuccessStatus) {}

  rpc asyncDeleteDocument(DeleteDocumentRequest) returns (SuccessStatus) {}
  rpc asyncBatchDeleteDocuments(BatchDeleteDocumentsRequest) returns (SuccessStatus) {}
}

message UpsertFieldValuesRequest {
  MultiFieldDocument multiFieldDocument = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message BatchUpsertFieldValuesRequest {
  repeated MultiFieldDocument multiFieldDocuments = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// Delete fields from a document.
message DeleteFieldValueRequest {
  MultiFieldDocument documentId = 1;
  repeated string fieldNames = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Delete fields from a batch of documents.
message BatchDeleteFieldValuesRequest {
  repeated MultiFieldDocument documentIds = 1;
  repeated string fieldNames = 2;
  google.protobuf.Timestamp timestamp = 3;
}

// Delete a document.
message DeleteDocumentRequest {
  MultiFieldDocument documentId = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// Delete a batch of documents.
message BatchDeleteDocumentsRequest {
  repeated MultiFieldDocument documentIds = 1;
  google.protobuf.Timestamp timestamp = 2;
}

message SuccessStatus {
}

message MultiFieldDocument {
  // field_name vs field_value
  map<string, FieldValue> document = 1;
}

message FieldValue {
  oneof Value {
    bool booleanValue = 1;
    int32 int32Value = 2;
    int64 int64Value = 3;
    float float32Value = 4;
    double float64Value = 5;
    string stringValue = 6;
    bytes bytesValue = 7;
  }
}