syntax = "proto3";

option java_package = "com.inlineio.schemas";

package ikvschemas;

import "google/protobuf/timestamp.proto";
import "common.proto";

message EventHeader {
  optional google.protobuf.Timestamp sourceTimestamp = 2;
}

message IKVDataEvent {
  EventHeader eventHeader = 1;

  // event data (upsert, delete, etc...)
  oneof event {
    UpsertDocumentFieldsEvent upsertDocumentFieldsEvent = 3;
    DeleteDocumentFieldsEvent deleteDocumentFieldsEvent = 4;
    DeleteDocumentEvent deleteDocumentEvent = 5;
    UpdateFieldSchemaEvent updateFieldSchemaEvent = 6;
  }
}

// Upsert fields for specified document.
message UpsertDocumentFieldsEvent {
  IKVDocumentOnWire document = 1;
}

// Delete specified fields for specified document.
message DeleteDocumentFieldsEvent {
  IKVDocumentOnWire documentId = 1;
  repeated string fieldsToDelete = 2;
}

// Delete specified document.
message DeleteDocumentEvent {
  IKVDocumentOnWire documentId = 1;
}

// Changes to field schema.
message UpdateFieldSchemaEvent {
  repeated FieldSchema newFieldsToAdd = 2;
}